welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:47: error: too many arguments for method faireDiagG: (c: java.awt.Color)Unit
		faireDiagG(Color,GREEN);
                          ^PatternPicture:50: error: too many arguments for method faireDiagG: (c: java.awt.Color)Unit
		faireDiagG(Color,GREEN);
                          ^